samples/_failures_safe/1761214534_ee8fc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49a27aed.c: In function ‘main’:
./samples/SAFE/__tmp_49a27aed.c:145:5: error: expected expression at end of input
  145 |     if (sum.data != NULL)
      |     ^~
./samples/SAFE/__tmp_49a27aed.c:145:5: error: expected declaration or statement at end of input
